Начало реализации логотипа-кнопки через колбэки

--- a/src/components/myHeader.css
+++ b/src/components/myHeader.css
@@ -2,8 +2,11 @@
     width: 150px;
     height: 150px;
     margin-left: -35px;
+
 }
 
-#body {
-    background-color: #00bfff;
+#logo:hover {
+
+    cursor: pointer;
+
 }
