--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -1,76 +1,13 @@
 /* Основные стили карточки покемона */
 .card {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    width: 100px;
+    height: 100px;
+}
+
+.pokemon-card-image {
     border: 2px solid black;
-    border-radius: 5px;
-    width: 200px;
-    background-color: #fff;
-    padding: 10px;
-    box-shadow: 2px 2px gray;
-    font-family: Arial, sans-serif;
 }
 
-/* Стили для картинки покемона */
-.card img {
-    height: 150px;
-    width: 150px;
-    object-fit: contain;
-}
-
-/* Стили для имени покемона */
-.card h2 {
-    font-size: 18px;
-    font-weight: bold;
-    margin: 0;
-    text-transform: capitalize;
-}
-
-/* Стили для типа покемона */
-.card p {
-    font-size: 14px;
-    margin-top: 5px;
+.card .card-title {
     text-align: center;
-    text-transform: capitalize;
-    border: 1px solid black;
-    padding: 3px 10px;
-    border-radius: 20px;
-    width: fit-content;
-}
-
-/* Стили для характеристик покемона */
-.card ul {
-    list-style: none;
-    margin: 10px 0;
-    padding: 0;
-    width: 100%;
-}
-
-.card li {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 5px 0;
-    font-size: 14px;
-}
-
-.card li span {
-    font-weight: bold;
-}
-
-/* Стили для кнопки детали покемона */
-.card button {
-    background-color: blue;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    padding: 5px 10px;
-    margin-top: 10px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-
-.card button:hover {
-    background-color: darkblue;
 }
