--- a/src/components/myHeader/myHeader.css
+++ b/src/components/myHeader/myHeader.css
@@ -14,8 +14,10 @@
 }
 
 .wrapper {
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 
+    /* background-image: url("C:\Users\79289\Desktop\Pokemon\pokemon-project\src\components\myHeader\texture.jpg"); */
+    background: linear-gradient(to bottom, #010f36, #00bfff);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 
     display: flex;
     /* создаем контейнер для логотипа и меню навигации в одной строке */
