--- a/src/components/PokemonDataGrid/PokemonDataGrid.css
+++ b/src/components/PokemonDataGrid/PokemonDataGrid.css
@@ -1,6 +1,7 @@
 .pokemon-data-grid {
     display: flex;
     align-items: flex-start;
+    align-content: flex-start;
     flex-wrap: wrap;
     height: 100%;
 }
