--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -1,16 +1,34 @@
-/* Основные стили карточки покемона */
-
-
-
 .card {
-    width: 100px;
-    height: 100px;
-
+    width: 120px;
+    height: 120px;
+    background: rgb(151, 175, 62);
+    margin: 5px;
+    border: 4px solid rgb(38, 65, 25);
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
 }
 
-/* .pokemon-card-image {} */
+.card-body {
+    width: 100%;
+    height: 70%;
+    /* background-color: red; */
+}
 
-.card .card-title {
+.card-footer {
+    width: 100%;
+    height: 30%;
+    /* background-color: rgb(47, 0, 255); */
+    display: flex;
+    justify-content: center;
+    font-size: medium;
     text-align: center;
-    margin-top: -10px;
+}
+
+img.card-body-image {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    object-fit: none;
 }
