--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -1,29 +1,41 @@
-.layout-sidebar1 {
+/* .layout-sidebar {
 
   top: 0;
   bottom: 0;
   width: 200px;
+} */
+
+.layout-sidebar {
+
+  height: auto;
+  width: auto;
+  min-width: 200px;
+  background-image: url('../../images/sidebar.jpg');
+  background-color: aquamarine;
+  background-repeat: repeat-y;
+  background-size: 300%;
+
 }
 
 .left1 {
   left: 0;
-  background-image: url('../../images/sidebar.png');
+  background-image: url('../../images/sidebar.jpg');
   /* Установим background-position, чтобы изображение было выровнено по левому краю */
   background-position: left top;
 }
 
 .right1 {
   right: 0;
-  background-image: url('../../images/sidebar.png');
+  background-image: url('../../images/sidebar.jpg');
   /* Установим background-position, чтобы изображение было выровнено по правому краю */
   background-position: right top;
 }
 
-.layout-sidebar1 img {
-  display: block;
+/* .layout-sidebar img {
+
+
   max-width: none;
-  /* установить максимальную ширину равной размеру изображения */
   width: 100%;
-  /* установить ширину 100%, чтобы изображение растянулось на всю ширину контейнера */
   height: auto;
-}
+  background-repeat: repeat-y;
+} */
