Бесшовные картинки в сайдбаре V2

--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -10,7 +10,7 @@
   height: auto;
   width: auto;
   min-width: 200px;
-  background-image: url('../../images/sidebar.jpg');
+  background-image: url('../../images/sidebar.svg');
   background-color: aquamarine;
   background-repeat: repeat-y;
   background-size: 300%;
