--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -10,10 +10,10 @@
   height: auto;
   width: auto;
   min-width: 200px;
-  background-image: url('../../images/sidebar.svg');
+  /* background-image: url('../../images/sidebar.svg');
   background-color: aquamarine;
   background-repeat: repeat-y;
-  background-size: 300%;
+  background-size: 300%; */
 
 }
 
