--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -1,7 +1,7 @@
 .card {
     width: 120px;
     height: 120px;
-    background: #55BD57;
+    background: #BEE37E;
     margin: 5px;
     border: 4px solid rgb(38, 65, 25);
     border-radius: 5px;
