--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -21,7 +21,7 @@
     display: flex;
     flex-direction: row;
 
-    background-image: url('../../images/sidebar.svg');
+    background-image: url('../../images/sidebar.jpg');
     background-attachment: fixed;
     /* добавлено новое свойство */
 
