--- a/src/components/myHeader/myHeader.css
+++ b/src/components/myHeader/myHeader.css
@@ -1,8 +1,8 @@
 #logo {
     /*mirror*/
     transform: scaleX(-1);
-    width: 100px;
-    height: 100px;
+    width: 170px;
+    height: 170px;
     margin-left: -25px;
 
 }
@@ -17,9 +17,7 @@
 
     /* background-image: url("C:\Users\79289\Desktop\Pokemon\pokemon-project\src\components\myHeader\texture.jpg"); */
 
-    background: linear-gradient(to bottom, #55BD57 10%, #55BD57 20%, #EEF7DD);
-    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.4);
-
+    /* background: linear-gradient(to bottom, #55BD57 10%, #55BD57 20%); */
 
     display: flex;
     /* создаем контейнер для логотипа и меню навигации в одной строке */
@@ -27,7 +25,7 @@
     /* равномерно распределяет пространство между логотипом и меню навигации */
     align-items: center;
     /* выравнивает элементы по вертикали */
-    background-color: #5E526C;
+    /* background-color: #5E526C; */
     /* задаем цвет для фона шапки */
     width: 100%;
 }
@@ -52,10 +50,10 @@
 }
 
 .nav-link {
-    color: white;
+    color: rgb(0, 0, 0);
     /* задаем цвет текста ссылок */
     text-decoration: none;
     /* убираем подчеркивание с текста ссылок */
-    font-size: 18px;
+    font-size: 28px;
     /* задаем размер шрифта для текста ссылок */
 }
