--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -10,7 +10,7 @@
   align-items: center;
 } */
 .root {
-  background-color: red;
+  background-color: rgb(0, 0, 0);
 }
 
 .modal {
@@ -38,7 +38,7 @@
 }
 
 .modal-header {
-  background-color: #D18344;
+  background-color: #F6E596;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -68,13 +68,15 @@ h3 {
 }
 
 .modal-footer {
-  background-color: #D18344;
+  background-color: #F6E596;
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  margin-top: 20px;
-  border-top: 1px solid #ddd;
+  margin-top: 25px;
   padding: 10px;
+  left: 10px;
+  width: 100%;
+  /* или другое значение по вашему выбору */
 }
 
 button {
@@ -98,6 +100,7 @@ button:hover {
 }
 
 .modal-overlay {
+
   position: fixed;
   top: 0;
   left: 0;
@@ -106,7 +109,7 @@ button:hover {
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 9999;
 
-} 
+}
 
 .modal-content {
   position: absolute;
@@ -116,4 +119,9 @@ button:hover {
   bottom: auto;
   margin-right: -50%;
   transform: translate(-50%, -50%);
+}
+
+.test-test-test {
+  width: 600px;
+  margin: auto;
 }
