--- a/src/components/PokemonDataGrid/PokemonDataGrid.css
+++ b/src/components/PokemonDataGrid/PokemonDataGrid.css
@@ -9,4 +9,54 @@
     background-color: #EEF7DD;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.4), 0 20px 40px rgba(0, 0, 0, 0.4);
     border-radius: 15px;
+    
+}
+
+.loader {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 50px;
+    margin: 20px 0;
+}
+
+.loader div {
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    margin: 0 5px;
+    animation: loaderAnimation 0.8s linear infinite;
+}
+
+.loader div:nth-of-type(1) {
+    background-color: #f44336;
+}
+
+.loader div:nth-of-type(2) {
+    background-color: #9c27b0;
+    animation-delay: 0.1s;
+}
+
+.loader div:nth-of-type(3) {
+    background-color: #3f51b5;
+    animation-delay: 0.2s;
+}
+
+.loader div:nth-of-type(4) {
+    background-color: #4caf50;
+    animation-delay: 0.3s;
+}
+
+@keyframes loaderAnimation {
+
+    0%,
+    80%,
+    100% {
+        transform: scale(0);
+    }
+
+    40% {
+        transform: scale(1);
+    }
 }
