--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -6,7 +6,8 @@
 
 }
 
-.left1 {
+/* .left1 {
+
   left: 0;
   background-image: url('../../images/sidebar.jpg');
   background-position: left top;
@@ -16,4 +17,4 @@
   right: 0;
   background-image: url('../../images/sidebar.jpg');
   background-position: right top;
-}
+} */
