--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -11,18 +11,23 @@
 
 .card-body {
     width: 100%;
-    height: 70%;
+    height: 80%;
     /* background-color: red; */
 }
 
 .card-footer {
     width: 100%;
-    height: 30%;
+    height: 20%;
     /* background-color: rgb(47, 0, 255); */
     display: flex;
     justify-content: center;
     font-size: medium;
     text-align: center;
+    margin: 0;
+    padding: 0;
+    border-top: 3px solid rgb(38, 65, 25);
+    background-color: #56BA53;
+
 }
 
 img.card-body-image {
@@ -32,6 +37,7 @@ img.card-body-image {
     padding: 0;
     object-fit: none;
 }
+
 .card:hover {
     transform: scale(1.1);
-  }
+}
