--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -27,6 +27,7 @@
   align-items: center;
   margin: auto;
   border: none;
+
 }
 
 .modal-card {
@@ -35,6 +36,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+
 }
 
 .modal-header {
@@ -43,9 +45,11 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  padding: 10px;
-  border-bottom: 1px solid #ddd;
+  width: auto;
+
+
+  /* add margin left */
+  border-radius: 10px;
 }
 
 h3 {
@@ -70,19 +74,18 @@ h3 {
 .modal-footer {
   background-color: #F6E596;
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
   margin-top: 25px;
   padding: 10px;
-  left: 10px;
-  width: 100%;
-  /* или другое значение по вашему выбору */
+  border-radius: 10px;
+  width: auto;
 }
 
 button {
 
   border: none;
-  background: #f1f1f1;
+  background: rgb(255, 255, 255);
   color: black;
   padding: 8px 16px;
   text-align: center;
@@ -92,11 +95,11 @@ button {
   margin: 4px 2px;
   cursor: pointer;
   border-radius: 4px;
-  transition: background-color 0.3s ease;
+  transition: background-color 0.2s ease;
 }
 
 button:hover {
-  background-color: #dddddd;
+  background-color: #BEE37E;
 }
 
 .modal-overlay {
@@ -108,7 +111,6 @@ button:hover {
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 9999;
-
 }
 
 .modal-content {
